--- a/views/admin/user_add.html
+++ b/views/admin/user_add.html
@@ -16,7 +16,7 @@
     <legend>
         <span class="layui-breadcrumb">
             <a href="/admin">首页</a>
-            <a><cite>添加用户</cite></a>
+            <a><cite>添加管理员</cite></a>
         </span>
     </legend>
 </fieldset>
