--- a/views/admin/user_view.html
+++ b/views/admin/user_view.html
@@ -17,7 +17,7 @@
     <legend>
         <span class="layui-breadcrumb">
             <a href="/admin">首页</a>
-            <a><cite>添加用户</cite></a>
+            <a><cite>添加管理员</cite></a>
         </span>
     </legend>
 </fieldset>
@@ -59,6 +59,7 @@
     
     </tbody>
 </table>
+<script src="/static/vipadmin/frame/layui/layui.js" charset="utf-8"></script>
 <script type="text/javascript">
 layui.use(['element','form'], function(){})
 </script>
