--- a/views/admin/userlist.html
+++ b/views/admin/userlist.html
@@ -17,7 +17,7 @@
     <legend>
         <span class="layui-breadcrumb">
             <a href="/admin">首页</a>
-            <a><cite>用户列表</cite></a>
+            <a><cite>管理员列表</cite></a>
         </span>
     </legend>
 </fieldset>
@@ -137,7 +137,7 @@
 			        { data: 'Realname' },
 			        { data: 'Email' },
 			        { data: 'Phone' },
-			        { data: 'Zone' },
+			        { data: 'Zonename' },
 			        { data: 'Name' }
                   ],
                   "language": {
