--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -34,7 +34,7 @@
                 </dl>
             </li>
             <li class="layui-nav-item">
-                <a class="name" href="javascript:;"><img src="/static/vipadmin/image/code.png" alt="logo"> Admin </a>
+                <a class="name" href="javascript:;"><img src="/static/vipadmin/image/code.png" alt="logo">{{.Claims.username}}【{{.Claims.rolename}}】</a>
                 <dl class="layui-nav-child">
                     <dd><a href="/admin/logout"><i class="layui-icon">&#x1006;</i>退出</a></dd>
                 </dl>
@@ -42,33 +42,38 @@
         </ul>
     </div>
     <!-- side -->
+	
     <div class="layui-side my-side">
         <div class="layui-side-scroll">
             <ul class="layui-nav layui-nav-tree" lay-filter="side">
-
+			{{if eq .Claims.role_id 1.0}}
                 <li class="layui-nav-item layui-nav-itemed">
-                    <a href="javascript:;"><i class="layui-icon">&#xe620;</i>用户管理</a>
+                    <a href="javascript:;"><i class="layui-icon">&#xe620;</i>管理员管理</a>
                     <dl class="layui-nav-child">
-                        <dd class="layui-nav-item"><a href="javascript:;" href-url="/admin/userlist"><i class="layui-icon">&#xe621;</i>用户列表</a></dd>
-						<dd class="layui-nav-item"><a href="javascript:;" href-url="/admin/role"><i class="layui-icon">&#xe621;</i>用户角色</a></dd>
+                        <dd class="layui-nav-item"><a href="javascript:;" href-url="/admin/userlist"><i class="layui-icon">&#xe621;</i>管理员列表</a></dd>
+						<dd class="layui-nav-item"><a href="javascript:;" href-url="/admin/role"><i class="layui-icon">&#xe621;</i>管理员角色</a></dd>
 				</dl>
                 </li>
+				{{end}}
                 <li class="layui-nav-item layui-nav-itemed">
                     <a href="javascript:;"><i class="layui-icon">&#xe628;</i>资料审核</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" href-url="/admin/verify"><i class="layui-icon">&#xe621;</i>审核列表</a></dd>
+                        <dd><a href="javascript:;" href-url="/admin/verify"><i class="layui-icon">&#xe621;</i>资料审核</a></dd>
+						<!--dd><a href="javascript:;" href-url="/admin/verify/tongji"><i class="layui-icon">&#xe621;</i>资料统计</a></dd-->
                 	</dl>
 				</li>
 				<li class="layui-nav-item layui-nav-itemed">
                     <a href="javascript:;"><i class="layui-icon">&#xe628;</i>签到审核</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" href-url="/admin/signs"><i class="layui-icon">&#xe621;</i>审核列表</a></dd>
+                        <dd><a href="javascript:;" href-url="/admin/signs"><i class="layui-icon">&#xe621;</i>签到审核</a></dd>
+						<!--dd><a href="javascript:;" href-url="/admin/signs/tongji"><i class="layui-icon">&#xe621;</i>签到统计</a></dd-->
                 	</dl>
 				</li>
 				
             </ul>
         </div>
     </div>
+	
     <!-- body -->
     <div class="layui-body my-body">
         <div class="layui-tab layui-tab-card my-tab" lay-filter="card" lay-allowClose="true">
