--- a/views/admin/node_view.html
+++ b/views/admin/node_view.html
@@ -64,6 +64,7 @@
     
     </tbody>
 </table>
+<script src="/static/vipadmin/frame/layui/layui.js" charset="utf-8"></script>
 <script type="text/javascript">
 layui.use(['element','form'], function(){})
 </script>
