--- a/views/admin/signs_list.html
+++ b/views/admin/signs_list.html
@@ -140,7 +140,7 @@
 					},	
 			        { data: 'Addtime' },
 					{
-				       "data": "isverify",
+				       "data": "Isverify",
 				       "orderable": false, // 禁用排序
 				       "defaultContent": "",
 				       "render": function (data, type, row, meta) {
