--- a/views/uploadpage.html
+++ b/views/uploadpage.html
@@ -14,7 +14,7 @@
   <legend>设定上传文件的格式</legend>
 </fieldset>
 <div class="site-demo-upload">
-  <img id="LAY_demo_upload" src="/layer/images/tong.jpg">
+  <img id="LAY_demo_upload" src="/static/vipadmin/image/upload.png">
   <div class="site-demo-upbar">
     <input type="file" name="file" id="file" class="layui-upload-file" id="test">
   </div>
@@ -30,7 +30,7 @@ layui.use('upload', function(){
     ,elem: '#file' //指定原始元素，默认直接查找class="layui-upload-file"
     ,method: 'post' //上传接口的http类型
     ,success: function(res){
-      LAY_demo_upload.src = res.url;
+      LAY_demo_upload.src = res.data;
     }
   });
 });
