--- a/views/admin/signs_view.html
+++ b/views/admin/signs_view.html
@@ -55,7 +55,7 @@
 	<tr>
         <td>签到定位</td>
         <td>
-<script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
+<script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp"></script>
 <script  type="text/javascript">
 var postion = {{.signs.Postion}};
 var postions= new Array(); //定义一数组 
