--- a/views/admin/verify_list.html
+++ b/views/admin/verify_list.html
@@ -22,7 +22,13 @@
     </legend>
 </fieldset>
 
+<div class="my-btn-box">
+    <span class="fl">
 
+        <a class="layui-btn btn-add btn-default" id="btn-add-article" href="/admin/verify/import">导入资料</a>
+    </span>
+  
+</div>
 <table id="dateTable" class="layui-table">
     <thead>
     <tr>
