--- a/views/admin/role_edit.html
+++ b/views/admin/role_edit.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 	
-
+	<input type="hidden" name="status" lay-verify="required" value="1" autocomplete="off" class="layui-input">
     <div class="layui-form-item layui-form-text">
         <label class="layui-form-label">备注</label>
         <div class="layui-input-block">
