--- a/views/admin/role_user.html
+++ b/views/admin/role_user.html
@@ -23,7 +23,7 @@
     </legend>
 </fieldset>
 
-<form class="layui-form" id="user-form">
+<!--form class="layui-form" id="user-form">
 	 <input type="hidden" name="role_id" value="{{.role.Id}}">
      <div class="layui-inline">
       <label class="layui-form-label">用户名</label>
@@ -42,7 +42,7 @@
             <button class="layui-btn" lay-submit="" name="submit" value="添加用户" lay-filter="demo1">添加用户</button>
         </div>
     </div>
-</form>	
+</form-->	
 
 <table id="dateTable" class="layui-table">
     <thead>
