--- a/views/admin/signs_list.html
+++ b/views/admin/signs_list.html
@@ -44,6 +44,7 @@
 <script type="text/javascript" charset="utf8" src="/static/vipadmin/js/jquery.js"></script>
 <script type="text/javascript" src="/static/vipadmin/js/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="/static/vipadmin/js/table-tool.js"></script>
+<script type="text/javascript" src="/static/vipadmin/js/extend.js"></script>
 <script type="text/javascript">
     layui.use(['element','layer'], function(){
         var $ = layui.jquery,element = layui.element,layer = layui.layer;
@@ -138,7 +139,12 @@
 							}
 						}
 					},	
-			        { data: 'Addtime' },
+					{ 
+						data: 'Addtime',
+						render:function(data,type,row,meta){
+							return data = formatTime(data);
+						}
+					},
 					{
 				       "data": "Isverify",
 				       "orderable": false, // 禁用排序
