--- a/views/admin/verify_list.html
+++ b/views/admin/verify_list.html
@@ -12,11 +12,11 @@
     <link rel="icon" href="/static/vipadmin/image/code.png">
 </head>
 <body class="body">
-
+<a class="refresh c-24" href="javascript:refresh_iframe();"><i class="Hui-iconfont Hui-iconfont-huanyipi f-16"></i>刷新</a>
 <fieldset class="layui-elem-field layui-field-title">
     <legend>
         <span class="layui-breadcrumb" style="display:block">
-            <a href="/admin">首页</a>
+            <a href="/admin" target="_top">首页</a>
             <a><cite>资料审核</cite></a>
         </span>
     </legend>
