--- a/static/vipadmin/css/style.css
+++ b/static/vipadmin/css/style.css
@@ -537,3 +537,23 @@ html body .layui-nav .layui-nav-bar {
 .site-demo-upload{position: relative; background: #e2e2e2;}
 .site-demo-upload .site-demo-upbar{position: absolute; top: 50%; left: 50%; margin: -18px 0 0 -56px;}
 .site-demo-upload .layui-upload-button{background-color: rgba(0,0,0,.2); color: rgba(255,255,255,1);}
+.refresh{
+    float: right;
+}
+.Hui-iconfont {
+    font-family: "Hui-iconfont" !important;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+	color: #7b7dea;
+}
+.Hui-iconfont-huanyipi:before
+{
+	background-size: cover;
+    vertical-align: middle;
+    display: inline-block;
+    width: 30px;
+    height: 29px;
+	content:url(/static/vipadmin/image/icon-refresh.png) !important;
+}
