--- a/views/admin/verify_view.html
+++ b/views/admin/verify_view.html
@@ -65,6 +65,10 @@
         <td>邮箱</td>
         <td>{{.member.Email}}</td>
     </tr>
+	<tr>
+        <td>备注</td>
+        <td>{{.member.Remark}}</td>
+    </tr>
 	<!--tr>
         <td>灵活就业形式</td>
         <td>{{.member.Worktype}}</td>
