测试兼容手机

--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -17,7 +17,7 @@
     <!-- header -->
     <div class="layui-header my-header">
        <!--<img class="my-header-logo" src="" alt="logo">-->
-            <a href="/admin/"><div class="my-header-logo">{{.Website}}</div></a>
+            <!--a href="/admin/"><div class="my-header-logo">{{.Website}}</div></a-->
         <div class="my-header-btn">
             <button class="layui-btn layui-btn-small btn-nav"><i class="layui-icon">&#xe620;</i></button>
         </div>
