--- a/views/admin/role_list.html
+++ b/views/admin/role_list.html
@@ -17,7 +17,7 @@
     <legend>
         <span class="layui-breadcrumb">
             <a href="/admin" target="_top">首页</a>
-            <a><cite>用户列表</cite></a>
+            <a><cite>角色列表</cite></a>
         </span>
     </legend>
 </fieldset>
