--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -58,7 +58,7 @@
                     <a href="javascript:;"><i class="layui-icon">&#xe628;</i>资料审核</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" href-url="/admin/verify"><i class="layui-icon">&#xe621;</i>资料审核</a></dd>
-						<!--dd><a href="javascript:;" href-url="/admin/verify/tongji"><i class="layui-icon">&#xe621;</i>资料统计</a></dd-->
+						<dd><a href="javascript:;" href-url="/admin/verify/tongji"><i class="layui-icon">&#xe621;</i>记录查询</a></dd>
                 	</dl>
 				</li>
 				<li class="layui-nav-item layui-nav-itemed">
