--- a/views/admin/verify_tongji.html
+++ b/views/admin/verify_tongji.html
@@ -5,71 +5,288 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>表格</title>
+    <title>Data-Table 表格</title>
     <link rel="stylesheet" href="/static/vipadmin/frame/layui/css/layui.css">
+    <!--<link rel="stylesheet" href="/static/vipadmin/css/jquery.dataTables.min.css">-->
     <link rel="stylesheet" href="/static/vipadmin/css/style.css">
     <link rel="icon" href="/static/vipadmin/image/code.png">
 </head>
 <body class="body">
-
-
-<fieldset class="layui-elem-field layui-field-title" style="margin-top:20px;">
+<a class="refresh c-24" href="javascript:refresh_iframe();"><i class="Hui-iconfont Hui-iconfont-huanyipi f-16"></i>刷新</a>
+<fieldset class="layui-elem-field layui-field-title">
     <legend>
-        <span class="layui-breadcrumb">
-            <a href="/admin">首页</a>
-            <a><cite>资料统计</cite></a>
+        <span class="layui-breadcrumb" style="display:block">
+            <a href="/admin" target="_top">首页</a>
+            <a><cite>记录查询</cite></a>
         </span>
     </legend>
 </fieldset>
 
-<div id="main-bing" style="width: 100%;height:700px;"></div>
+<div class="my-btn-box">
+    <span class="fl">
 
-<script src="/static/vipadmin/frame/layui/layui.js" charset="utf-8"></script>
-<script type="text/javascript" src="/static/vipadmin/frame/echarts/echarts.min.js"></script>
+        <a class="layui-btn btn-add btn-default" id="btn-add-article" href="/admin/verify/outport">导出记录</a>
+    </span>
+  	*备注：查询可以输入身份证号、真实姓名、电话、核查员进行搜索
+</div>
+<table id="dateTable" class="layui-table">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>身份证号</th>
+        <th>真实姓名</th>
+        <th>电话</th>
+		<th>年度</th>
+		<th>灵活就业地址</th>
+        <th>灵活就业形式</th>
+		<th>资料审核</th>
+		<th>备注</th>
+		<th>年度审核</th>
+		<th>二季度</th>
+		<th>三季度</th>
+		<th>四季度</th>
+		<th>签到位置</th>
+		<th>核查员</th>
+		<th>更新时间</th>
+        <th>操作</th>
+    </tr>
+    </thead>
+   
+</table>
+
+<script type="text/javascript" src="/static/vipadmin/frame/layui/layui.js"></script>
+<!-- jQuery -->
+<script type="text/javascript" charset="utf8" src="/static/vipadmin/js/jquery.js"></script>
+<script type="text/javascript" src="/static/vipadmin/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="/static/vipadmin/js/table-tool.js"></script>
+<script type="text/javascript" src="/static/vipadmin/js/extend.js"></script>
 <script type="text/javascript">
-layui.use(['element','form'], function(){});
- // 基于准备好的dom，初始化echarts实例
-var chart = echarts.init(document.getElementById('main-bing'));
-chart.setOption({
-    title : {
-        text: '彭山区4050人员资料统计表',
-        subtext: '2017年度',
-        x:'center'
-    },
-    tooltip : {
-        trigger: 'item',
-        formatter: "{a} <br/>{b} : {c} ({d}%)"
-    },
-    legend: {
-        orient: 'vertical',
-        left: 'left',
-        data: ['直接访问','邮件营销','联盟广告','视频广告','搜索引擎']
-    },
-    series : [
-        {
-            name: '访问来源',
-            type: 'pie',
-            radius : '55%',
-            center: ['50%', '60%'],
-            data:[
-                {value:335, name:'直接访问'},
-                {value:310, name:'邮件营销'},
-                {value:234, name:'联盟广告'},
-                {value:135, name:'视频广告'},
-                {value:1548, name:'搜索引擎'}
-            ],
-            itemStyle: {
-                emphasis: {
-                    shadowBlur: 10,
-                    shadowOffsetX: 0,
-                    shadowColor: 'rgba(0, 0, 0, 0.5)'
-                }
+    layui.use(['element','layer'], function(){
+        var $ = layui.jquery,element = layui.element,layer = layui.layer;
+
+        // 初始化表格
+       /* $('#dateTable').DataTable({
+            "dom": '<"top">rt<"bottom"flp><"clear">',
+            "autoWidth": false,                     // 自适应宽度
+            "stateSave": true,                      // 刷新后保存页数
+            "order": [[ 1, "desc" ]],               // 排序
+            "searching": false,                     // 本地搜索
+            "info": true,                           // 控制是否显示表格左下角的信息
+            "stripeClasses": ["odd", "even"],       // 为奇偶行加上样式，兼容不支持CSS伪类的场合
+            "aoColumnDefs": [{                      // 指定列不参与排序
+                "orderable": false,
+                "aTargets": [0,7]                   // 对应你的表格的列数
+            }],
+            "pagingType": "simple_numbers",         // 分页样式 simple,simple_numbers,full,full_numbers
+            "language": {                           // 国际化
+                "url":'language.json'
             }
+        });
+		*/
+		var dataTable = $('#dateTable').DataTable( {
+                  autoWidth: false,  //禁用自动调整列宽
+                  stripeClasses: ["odd", "even"],  //为奇偶行加上样式，兼容不支持CSS伪类的场合
+                  processing: true,  //隐藏加载提示,自行处理
+                  serverSide: true,  //启用服务器端分页
+                  //searching: false,  //禁用原生搜索
+                  orderMulti: false,  //启用多列排序
+                  order: [
+                      [0,'desc']
+                  ],  //取消默认排序查询,否则复选框一列会出现小箭头
+                  renderer: "bootstrap",  //渲染样式：Bootstrap和jquery-ui
+                  pagingType: "full_numbers",  //分页样式：simple,simple_numbers,full,full_numbers
+                  
+                  ajax: function (data, callback, settings) {
+				
+                      //封装请求参数
+                      var param = {};
+                      var orderColumnNum = data.order[0]['column'];
+                      param.sortColumn = data.columns[orderColumnNum].data;
+                      //param.order = data.order[0]['dir'];
+                      param.limit = data.length;//页面显示记录条数，在页面显示每页显示多少项的时候
+                      param.start = data.start;//开始的记录序号
+                      param.page = (data.start / data.length)+1;//当前页码
+                      param.search = data['search']['value'];
+					  console.log(param)
+                      //ajax请求数据
+                      $.ajax({
+                          type: "GET",
+                          url: "/admin/verify/tongjilist",
+                          cache: false,  //禁用缓存
+                          data: param,  //传入组装的参数
+                          dataType: "json",
+                          success: function (result) {
+							
+                              console.log(result);
+                              //setTimeout仅为测试延迟效果
+						//console.log(result);
+                              setTimeout(function () {
+                                  //封装返回数据
+                                  var returnData = {};
+                                  //returnData.draw = data.draw;//这里直接自行返回了draw计数器,应该由后台返回
+                                  returnData.recordsTotal = result.total;//返回数据全部记录
+                                  returnData.recordsFiltered = result.total;//后台不实现过滤功能，每次查询均视作全部结果
+                                  returnData.data = result.data;//返回的数据列表
+                                  //console.log(returnData);
+                                  //调用DataTables提供的callback方法，代表数据已封装完成并传回DataTables进行渲染
+                                  //此时的数据需确保正确无误，异常判断应在执行此回调前自行处理完毕
+                                  callback(returnData);
+                              }, 200);
+                          }
+                      });
+                  },
+
+                  //列表表头字段
+                  columns: [
+	                { data: 'Id' },
+			        { data: 'Username' },
+			        { data: 'Realname' },
+			        { data: 'Phone' },
+					{ 
+						data: 'Years',
+					  	render:function(data, type, row, meta) {
+							return data = data+'年'	;
+						}	
+					},
+			        { data: 'Workaddress' },
+					{ data: 'Worktype' },
+					 { 
+						data: 'Isverify',
+						render:function(data, type, row, meta){
+							if(data==1){
+								return '通过';
+							}else if(data ==-1){
+								return '驳回';
+							}else{
+								return '待审';
+							}
+						}
+					},
+					{data:'Remark'},
+					{ 
+						data: 'Isyears',
+						render:function(data, type, row, meta){
+							if(data==1){
+								return '通过';
+							}else{
+								return '待审';
+							}
+						}
+					},
+					
+					{ 
+						data: 'Quarter2',
+						render:function(data, type, row, meta){
+							if(data > 0){
+								return '通过';
+							}else{
+								return '待审';
+							}
+						}
+					},
+					{ 
+						data: 'Quarter3',
+						render:function(data, type, row, meta){
+							if(data > 0){
+								return '通过';
+							}else{
+								return '待审';
+							}
+						}
+					},
+					{ 
+						data: 'Quarter4',
+						render:function(data, type, row, meta){
+							if(data > 0){
+								return '通过';
+							}else{
+								return '待审';
+							}
+						}
+					},
+					{data:'Postion'},
+					{data:'Adminname'},
+					{ 
+						data: 'Updatetime',
+						render:function(data,type,row,meta){
+							return data = formatTime(data);
+						}
+					},
+					{
+				       "data": "Isverify",
+				       "orderable": false, // 禁用排序
+				       "defaultContent": "",
+				       "render": function (data, type, row, meta) {
+								return data = '<button class="layui-btn layui-btn-small view">查看</button>';
+				           
+				        }
+					},	
+                  ],
+                  "language": {
+                      "processing": "加载中...",
+                      "lengthMenu": "显示 _MENU_ 条结果",
+                      "zeroRecords": "没有匹配结果",
+                      "info": "显示第 _START_ 至 _END_ 条结果，共 _TOTAL_ 条",
+                      "infoEmpty": "显示第 0 至 0 条结果，共 0 条",
+                      "infoFiltered": "(由 _MAX_ 项结果过滤)",
+                      "infoPostFix": "",
+                      "search": "搜索:",
+                      "searchPlaceholder": "搜索...",
+                      "url": "",
+                      "emptyTable": "表中数据为空",
+                      "loadingRecords": "载入中...",
+                      "infoThousands": ",",
+                      "paginate": {
+                          "first": "首页",
+                          "previous": "上页",
+                          "next": "下页",
+                          "last": "末页"
+                      },
+                      "aria": {
+                          paginate: {
+                              first: '首页',
+                              previous: '上页',
+                              next: '下页',
+                              last: '末页'
+                          },
+                          "sortAscending": ": 以升序排列此列",
+                          "sortDescending": ": 以降序排列此列"
+                      },
+                      "decimal": "-",
+                      "thousands": "."
+                  }
+
+              });
+		
+        // 例:获取ids
+        $(document).on('click','#btn-delete-all', function(){
+            // getIds(table对象,获取input为id的属性)
+            var list = getIds($('#dateTable'),'data-id');
+            if(list == null || list == ''){
+                layer.msg('未选择');
+            }else{
+                layer.msg(list);
+            }
+        });
+	
+		$('#dateTable tbody').on( 'click','.view',function () {
+            var data = dataTable.row( $(this).parents('tr') ).data();
+			window.location="/admin/verify/applyview?id="+data.Id
+		});	
+		 
+		
+
+
+    });
+	 //时间戳转换日期格式
+    function timestrap2date(value) {
+        if(value!=null ){
+            var now = new Date(parseInt(value) * 1000);
+            //return now.pattern("yyyy-MM-dd HH:mm:ss");
+        }else{
+            return '-';
         }
-    ]
-});
-
+    }
 </script>
-
 </body>
 </html>
